# taco

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
src/taco/: Makefile.am  bad_feature_structure_set.h  bad_unordered_feature_structure_set.h  constraint.cc  constraint.h  constraint_evaluator.cc  constraint_evaluator.h  constraint_set.cc  constraint_set.h  constraint_set_set.h  constraint_term.cc  constraint_term.h  feature_path.h  feature_selection_rule.h  feature_selection_table.cc  feature_selection_table.h  feature_structure.cc  feature_structure.h  feature_structure_set.h  feature_structure_spec.cc  feature_structure_spec.h  feature_tree.h  interpretation.cc  interpretation.h  lexicon.cc  lexicon.h  option_table.cc  option_table.h
src/taco/base/: Makefile.am  basic_types.h  exception.h  hash_combine.h  numbered_set.h  string_piece.cc  string_piece.h  string_util.cc  string_util.h  utility.h  vocabulary.h
src/taco/test/: .gitignore  Makefile.am  test_constraint.cc  test_constraint_evaluator.cc  test_constraint_set.cc  test_constraint_term.cc  test_feature_selection_table.cc  test_feature_structure.cc  test_feature_structure_set.cc  test_interpretation.cc
src/taco/text-formats/: Makefile.am  constraint_parser.cc  constraint_parser.h  constraint_set_parser.cc  constraint_set_parser.h  constraint_set_seq_parser.cc  constraint_set_seq_parser.h  constraint_set_set_parser.cc  constraint_set_set_parser.h  constraint_table_parser.cc  constraint_table_parser.h  constraint_table_writer.cc  constraint_table_writer.h  constraint_tokeniser.cc  constraint_tokeniser.h  constraint_writer.cc  constraint_writer.h  feature_structure_parser.cc  feature_structure_parser.h  feature_structure_seq_parser.cc  feature_structure_seq_parser.h  feature_structure_tokeniser.cc  feature_structure_tokeniser.h  feature_structure_writer.cc  (+5 more)
tools/: Makefile.am
tools-common/: Makefile.am  constraint_table.cc  constraint_table.h  feature_selection_map.cc  feature_selection_map.h
tools-common/cli/: Makefile.am  tool.cc  tool.h
tools-common/compat-moses/: Makefile.am  rule_table_parser.cc  rule_table_parser.h  string_tree_parser.cc  string_tree_parser.h  string_tree_writer.cc  string_tree_writer.h  syntax_tree.cc  syntax_tree.h  tables_core.cc  tables_core.h  xml_exception.h  xml_tree.cc  xml_tree.h  xml_tree_parser.h  xml_tree_parser_defaults.h  xml_tree_writer.h  xml_tree_writer_defaults.h
tools-common/compat-nlp-de/: Makefile.am  bitpar.cc  bitpar.h  smor.cc  smor.h  smor_to_stts.cc  smor_to_stts.h  stts.cc  stts.h
tools-common/compat-nlp-el/: Makefile.am  gdt.cc  gdt.h
tools-common/m1/: Makefile.am  case_model.cc  case_model.h  parse_tree_type.cc  parse_tree_type.h  relation_evaluator.h  st_relation.h
tools-common/m3/: st_relation.h
tools-common/relation/: Makefile.am  relation.h  relation_id.cc  relation_id.h  relation_tree_ops.h
tools-common/syntax-tree/: string_tree.h  syntax_tree.h  syntax_tree_ops-inl.h  syntax_tree_ops.h
tools-common/test/: .gitignore  Makefile.am  test_constraint_table.cc
tools-common/text-formats/: Makefile.am  constraint_extract_parser.cc  constraint_extract_parser.h  constraint_extract_writer.h  constraint_map_parser.cc  constraint_map_parser.h  constraint_map_writer.h  rule_table_index_parser.cc  rule_table_index_parser.h  vocab_parser.cc  vocab_parser.h
tools/add-constraint-ids/: .gitignore  Makefile.am  add_constraint_ids.cc  add_constraint_ids.h  main.cc  options.h
tools/add-feature-selection-ids/: .gitignore  Makefile.am  add_feature_selection_ids.cc  add_feature_selection_ids.h  main.cc  options.h
tools/combine-constraint-maps/: .gitignore  Makefile.am  combine_constraint_maps.cc  combine_constraint_maps.h  input_reader.cc  input_reader.h  main.cc  options.h
tools/index-rule-table/: .gitignore  Makefile.am  index_rule_table.cc  index_rule_table.h  main.cc  options.h
tools/m1-consolidate-constraints/: .gitignore  Makefile.am  batch.cc  batch.h  consolidator.cc  consolidator.h  cs_merger.cc  cs_merger.h  m1_consolidate_constraints.cc  m1_consolidate_constraints.h  main.cc  options.h  statistics.h  typedef.h
tools/m1-estimate-case-freqs/: .gitignore  Makefile.am  case_inferrer.cc  case_inferrer.h  m1_estimate_case_freqs.cc  m1_estimate_case_freqs.h  main.cc  options.h  tree_parser.h  typedef.h
tools/m1-extract-constraints/: .gitignore  Makefile.am  extractor.cc  extractor.h  m1_extract_constraints.cc  m1_extract_constraints.h  main.cc  options.h  tree_context.cc  tree_context.h  tree_context_bitpar.cc  tree_context_bitpar.h  tree_context_parzu.cc  tree_context_parzu.h  tree_fragment.cc  tree_fragment.h  tree_parser.h  typedef.h  writer.cc  writer.h
tools/m1-extract-lexicon/: .gitignore  Makefile.am  interpreter.cc  interpreter.h  m1_extract_lexicon.cc  m1_extract_lexicon.h  main.cc  options.h  pos_table.cc  pos_table.h
tools/m1-extract-vocab/: .gitignore  Makefile.am  m1_extract_vocab.cc  m1_extract_vocab.h  main.cc  options.h
tools/m1-label-st-sets/: .gitignore  Makefile.am  extractor.cc  extractor.h  extractor_bitpar.cc  extractor_bitpar.h  extractor_parzu.cc  extractor_parzu.h  m1_label_st_sets.cc  m1_label_st_sets.h  main.cc  options.h  tree_parser.h  tree_writer.h  typedef.h
tools/m3-extract-constraints/: .gitignore  Makefile.am  extractor.cc  extractor.h  indices.txt  m3_extract_constraints.cc  m3_extract_constraints.h  main.cc  options.h  tree_context.cc  tree_context.h  tree_fragment.cc  tree_fragment.h  tree_parser.h  typedef.h  writer.cc  writer.h
tools/m3-label-st-sets/: .gitignore  Makefile.am  extractor.cc  extractor.h  m3_label_st_sets.cc  m3_label_st_sets.h  main.cc  options.h  tree_parser.h  tree_writer.h  typedef.h
tools/match-constraints-to-rules/: .gitignore  Makefile.am  main.cc  match_constraints_to_rules.cc  match_constraints_to_rules.h  options.h
tools/prune-redundant-constraints/: .gitignore  Makefile.am  main.cc  options.h  prune_redundant_constraints.cc  prune_redundant_constraints.h
tools/repair-lexicon/: .gitignore  Makefile.am  main.cc  options.h  repair_lexicon.cc  repair_lexicon.h
(+29 files in other folders)
