SUBDIRS = add-constraint-ids \
          add-feature-selection-ids \
          combine-constraint-maps \
          index-rule-table \
          m1-consolidate-constraints \
          m1-estimate-case-freqs \
          m1-extract-constraints \
          m1-extract-lexicon \
          m1-extract-vocab \
          m1-label-st-sets \
          m3-label-st-sets \
          match-constraints-to-rules \
          prune-redundant-constraints \
          repair-lexicon
