SUBDIRS = test

AM_CPPFLAGS = $(BOOST_CPPFLAGS) -I$(top_srcdir)/src -I$(top_srcdir)

noinst_LTLIBRARIES = libtool-common-compat-moses.la

libtool_common_compat_moses_la_SOURCES = \
    rule_table_parser.cc \
    rule_table_parser.h \
    string_tree_parser.cc \
    string_tree_parser.h \
    string_tree_writer.cc \
    string_tree_writer.h \
    syntax_tree.cc \
    syntax_tree.h \
    tables_core.cc \
    tables_core.h \
    xml_exception.h \
    xml_tree.cc \
    xml_tree.h \
    xml_tree_parser.h \
    xml_tree_parser_defaults.h \
    xml_tree_writer.h \
    xml_tree_writer_defaults.h
