SUBDIRS = test

AM_CPPFLAGS = $(BOOST_CPPFLAGS) -I$(top_srcdir)/src -I$(top_srcdir)

noinst_LTLIBRARIES = libtool-common-compat-nlp-de.la

libtool_common_compat_nlp_de_la_SOURCES = \
    bitpar.h \
    bitpar.cc \
    smor.cc \
    smor.h \
    smor_to_stts.cc \
    smor_to_stts.h \
    stts.cc \
    stts.h
