#SUBDIRS = test

AM_CPPFLAGS = $(BOOST_CPPFLAGS) -I$(top_srcdir)/src

noinst_LTLIBRARIES = libtaco-base.la

libtaco_base_la_SOURCES = \
    basic_types.h \
    exception.h \
    hash_combine.h \
    string_piece.cc \
    string_piece.h \
    string_util.cc \
    string_util.h \
    utility.h \
    vocabulary.h
