SUBDIRS = test

AM_CPPFLAGS = $(BOOST_CPPFLAGS) -I$(top_srcdir)/src

noinst_LTLIBRARIES = libtaco-text-formats.la

libtaco_text_formats_la_SOURCES = \
    constraint_parser.cc \
    constraint_parser.h \
    constraint_set_parser.h \
    constraint_set_parser.cc \
    constraint_set_seq_parser.h \
    constraint_set_seq_parser.cc \
    constraint_set_set_parser.h \
    constraint_set_set_parser.cc \
    constraint_table_parser.cc \
    constraint_table_parser.h \
    constraint_table_writer.cc \
    constraint_table_writer.h \
    constraint_tokeniser.cc \
    constraint_tokeniser.h \
    constraint_writer.cc \
    constraint_writer.h \
    feature_structure_parser.cc \
    feature_structure_parser.h \
    feature_structure_seq_parser.cc \
    feature_structure_seq_parser.h \
    feature_structure_tokeniser.cc \
    feature_structure_tokeniser.h \
    feature_structure_writer.cc \
    feature_structure_writer.h \
    feature_tree_parser.cc \
    feature_tree_parser.h \
    lexicon_parser.cc \
    lexicon_parser.h
